<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme">

    <item
        android:id="@+id/play_button"
        android:title="@string/menu_button_play"
        android:visible="false"
        android:icon="@drawable/ic_play_arrow_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/results_button"
        android:title="@string/menu_button_results"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/load_list_button"
        android:title="@string/menu_button_load"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/log_out_button"
        android:title="@string/menu_button_log_out"
        android:visible="false"
        app:showAsAction="never"/>

</menu>