<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.mprog.axel.wrds_programmeerproject.Activities.LogInActivity">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/form_linearLayout">

        <TextView
            android:text="@string/title_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="30sp"
            android:paddingBottom="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_editText"
            android:hint="@string/hint_email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textPersonName"
            android:ems="10"
            android:id="@+id/username_editText"
            android:hint="@string/hint_username"
            android:visibility="gone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_editText"
            android:hint="@string/hint_password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password2_editText"
            android:hint="@string/hint_password2"
            android:visibility="gone" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_button"
                android:layout_weight="1" />

            <Button
                android:text="@string/button_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/log_in_button"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
