<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/editTexts">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="10dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#BDBDBD"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/wordA_editText"
            android:layout_weight="4"
            android:hint="@string/hint_word_a"
            android:textSize="14sp"
            android:singleLine="true" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#BDBDBD"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/wordB_editText"
            android:layout_weight="4"
            android:hint="@string/hint_word_b"
            android:maxLines="1"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:text="@string/button_add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/add_word_button"
        android:layout_weight="1" />

</LinearLayout>

